--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -8,6 +8,12 @@ body{
     line-height: 1.42857143;
     font-size: 16px;
 }
+.header-container {
+    box-shadow: 0 6px 6px rgba(0,0,0,.08);
+    position: fixed;
+    z-index: 3;
+    width: 100%;
+}
 .nav-barra-top {
     display: flex;
     justify-content: space-between;
@@ -15,10 +21,6 @@ body{
     padding: 0 20px;
     height: 76px;
     background: #909090;
-    box-shadow: 0 6px 6px rgba(0,0,0,.08);
-    position: fixed;
-    z-index: 3;
-    width: 100%;
 }
 .nav-elementos-izquierda {
     flex: 1;
@@ -81,6 +83,9 @@ img {
     border-radius: 3px;
     font-size: 17px;
 }
+.nav-input::placeholder{
+    font-size: 13px;
+}
 .nav-btn-search{
     background: transparent;
     position: absolute;
@@ -142,4 +147,173 @@ a{
     right: 14px;
     top: -7px;
     cursor: pointer;
+}
+
+/*Zona del main*/
+
+.main-div-info {
+    padding-top: 80px;
+    margin: 0 auto;
+}
+.div-contenedor-info {
+    line-height: 1.8;
+    padding: 40px 15px 78px 15px;
+    width: 960px;
+    margin: 0 auto;
+}
+.titulo-info{
+    text-align: center;
+    margin-top: 37px;
+    font-size: 28px;
+    font-weight: 900;
+}
+.div-contenedor-parrafos {
+    font-size: 17px;
+}
+.div-contenedor-parrafos{
+    text-align: justify;
+}
+p {
+    margin-top: 0;
+}
+/*Zona del footer*/
+
+.zona-footer {
+    background: #909090;
+}
+.p-div-footer {
+    padding-top: 0;
+    max-width: 100%;
+    width: 1472px;
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.div-container-modulos{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 0;
+}
+.modulo-info{
+    color: #fff;
+    padding: 50px 25px;
+    text-align: left;
+    width: 350px;
+    max-width: 100%;
+}
+.container-logo-footer {
+    text-align: center;
+    padding: 0 25px;
+}
+
+.img-logo-principal {
+    width: 131px;
+}
+.modulo-ul-footer {
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px 25px;
+    margin: 0;
+    border-bottom: 1px solid hsla(0,0%,100%,.1);
+    min-width: 300px;
+}
+.modulo-ul-footer h3{
+    position: relative;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    font-family: HLTStd-boldcond;
+    font-size: 18px;
+    text-align: left;
+    font-weight: 700;
+    margin: 0 0 15px;
+}
+.modulo-container-items{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.items-li-footer {
+    text-align: left;
+    display: inline-block;
+    padding: 5px 0;
+}
+.items-li-footer a {
+    color: #fff;
+    white-space: nowrap;
+    font-size: 14px;
+    text-align: left;
+    display: block;
+    margin: 0;
+}
+.modulo-encuesta {
+    width: 100%;
+    padding: 15px 0;
+}
+.modulo-encuesta h3 {
+    margin-bottom: 5px!important;
+}
+.div-container-img-encuesta {
+    padding: 10px 0 0;
+    text-align: left;
+}
+.footer-img-encuesta {
+    width: 112px;
+}
+.modulo-fp-lr {
+    padding: 50px 25px;
+}
+.modulo-fp-lr h3 {
+    color: #fff;
+    display: block;
+    margin-bottom: 12px;
+    font-size: 18px;
+}
+.container-img-fp {
+    display: flex;
+    margin-bottom: 25px;
+    width: 274px;
+    max-width: 100%;
+}
+.container-img-fp  span{
+    flex: 1;
+}
+.footer-img-fp {
+    width: 64px;
+    height: 35px;
+}
+.container-img-lr {
+    padding-top: 6px;
+    margin-bottom: 24px;
+    display: flex;
+}
+.ul-container-img-redes {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+}
+.ul-container-img-redes li{
+    padding: 0 8px;
+}
+.footer-img-lr {
+    width: 112px;
+}
+.div-container-derechos {
+    text-align: center;
+    font-size: 13px;
+    color: #fff;
+    padding: 14px;
+    font-family: HLTStd-bold,Helvetica,Arial,sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    max-width: 100%;
+}
+.div-container-derechos p{
+    margin: 0;
 }
