--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,315 +5,189 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'IBM Plex Sans Condensed', sans-serif;
-    line-height: 1.42857143;
     font-size: 16px;
 }
-.header-container {
-    box-shadow: 0 6px 6px rgba(0,0,0,.08);
-    position: fixed;
-    z-index: 3;
-    width: 100%;
-}
-.nav-barra-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-    height: 76px;
-    background: #909090;
-}
-.nav-elementos-izquierda {
-    flex: 1;
-    height: 100%;
-}
-.nav-logo-restaurante{
-    display: flex;
-    align-items: center;
-    padding: 0;
-    height: 76px;
-}
-.enlace-logo-restaurante {
-    margin-right: 25px;
-    position: relative;
-    height: 80px;
-    padding: 3px 14px 7px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-start;
-    cursor: pointer;
-}
+
+
 .logo-restaurante {
     width: 82.38px;
     height: 70px;
 }
-img {
-    vertical-align: middle;
-    border: 0;
-}
-.nav-elementos-izquierda, .nav-elementos-derecha {
-    display: flex;
-    align-items: center;
-}
-.nav-elementos-derecha a b{
-    font-size: 17px;
-    font-weight: 900;
-}
-.nav-buscador {
-    position: relative;
-    border: 1.5px solid #000;
-    border-radius: 20px;
-    background: #fff;
-    margin:  0 40px 0 0;
-}
-/* input[type=text], select, textarea {
-    line-height: 1;
-
-    color: inherit;
-    font: inherit;
-    margin: 0;
-
-    font-size: inherit;
-} */
-.nav-input {
-    padding: 11px 20px 7px 16px;
-    width: 261px;
-    background: transparent;
-    border: none;
-    border-radius: 3px;
-    font-size: 17px;
-}
-.nav-input::placeholder{
-    font-size: 13px;
-}
-.nav-btn-search{
-    background: transparent;
-    position: absolute;
-    top: -1px;
-    right: 3px;
-    height: 100%;
-    border: 0;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    padding: 0 9px;
-    cursor: pointer;
-}
-.nav-btn-search i {
-    pointer-events: none;
-    width: 17px;
-}
-.nav-btn-search i{
-    font-size: 17px;
-}
 i{
     vertical-align: middle;
-    border: 0;
-    font-size: 22px;
-    color: #000;
-}
-.nav-zona-iconos{
-    display: flex;
-    align-items: flex-end;
-}
-a{
-    text-decoration: none;
-    background-color: transparent;
-}
-.nav-zona-iconos b {
-    padding: 0 5px 0 45px;
-    margin: auto 0;
-    font-size: 18px;
-    color: #000;
-    line-height: 1;
-    display: inline-block;
-}
-.nav-div-bag {
-    position: relative;
-    margin-right: 7px;
-    margin-left: 60px;
-}
-.contador-bag {
     color: #fff;
-    line-height: 1;
-    border-radius: 50px;
-    font-size: 11px;
-    width: 20px;
-    background: #00833e;
-    height: 19px;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    right: 14px;
-    top: -7px;
-    cursor: pointer;
 }
 
 /*Zona del main*/
 
-.main-div-info {
-    padding-top: 80px;
-    margin: 0 auto;
-}
-.div-contenedor-info {
-    line-height: 1.8;
-    padding: 40px 15px 78px 15px;
-    width: 960px;
-    margin: 0 auto;
-}
-.titulo-info{
-    text-align: center;
-    margin-top: 37px;
-    font-size: 28px;
-    font-weight: 900;
-}
-.div-contenedor-parrafos {
-    font-size: 17px;
-}
-.div-contenedor-parrafos{
-    text-align: justify;
-}
-p {
-    margin-top: 0;
-}
 /*Zona del footer*/
 
-.zona-footer {
-    background: #909090;
-}
-.p-div-footer {
-    padding-top: 0;
-    max-width: 100%;
-    width: 1472px;
-    margin: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-.div-container-modulos{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin: 0;
-}
-.modulo-info{
-    color: #fff;
-    padding: 50px 25px;
-    text-align: left;
-    width: 350px;
-    max-width: 100%;
-}
-.container-logo-footer {
-    text-align: center;
-    padding: 0 25px;
-}
-
-.img-logo-principal {
-    width: 131px;
-}
-.modulo-ul-footer {
-    list-style: none;
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    padding: 50px 25px;
-    margin: 0;
-    border-bottom: 1px solid hsla(0,0%,100%,.1);
-    min-width: 300px;
-}
-.modulo-ul-footer h3{
-    position: relative;
-    width: 100%;
-    text-align: center;
-    color: #fff;
-    font-family: HLTStd-boldcond;
-    font-size: 18px;
-    text-align: left;
-    font-weight: 700;
-    margin: 0 0 15px;
-}
-.modulo-container-items{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-.items-li-footer {
-    text-align: left;
-    display: inline-block;
-    padding: 5px 0;
-}
-.items-li-footer a {
-    color: #fff;
-    white-space: nowrap;
-    font-size: 14px;
-    text-align: left;
-    display: block;
-    margin: 0;
-}
-.modulo-encuesta {
-    width: 100%;
-    padding: 15px 0;
-}
-.modulo-encuesta h3 {
-    margin-bottom: 5px!important;
-}
-.div-container-img-encuesta {
-    padding: 10px 0 0;
-    text-align: left;
-}
-.footer-img-encuesta {
-    width: 112px;
-}
-.modulo-fp-lr {
-    padding: 50px 25px;
-}
-.modulo-fp-lr h3 {
-    color: #fff;
-    display: block;
-    margin-bottom: 12px;
-    font-size: 18px;
-}
-.container-img-fp {
-    display: flex;
-    margin-bottom: 25px;
-    width: 274px;
-    max-width: 100%;
-}
-.container-img-fp  span{
-    flex: 1;
-}
+/*imagenes del formas de pago*/
 .footer-img-fp {
     width: 64px;
     height: 35px;
 }
-.container-img-lr {
-    padding-top: 6px;
-    margin-bottom: 24px;
-    display: flex;
+
+@media screen and (min-width: 1025px){
+    .logo-restaurante {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        width: 70px;
+    }
+    i{
+        font-size: 30px;
+        color: #fff;
+    }
+    #id-input-buscar{
+        height: 30px;
+        font-size: 15px;
+        margin-right: 8px ;
+    }
+    #id-btn-buscar{
+        padding: 5px;
+        border: none;
+        background-color: #fff;
+    }
+    #id-logo-buscar{
+        color: #000;
+    }
+    #cantidadcarrito{
+        border-radius: 10px;
+        width: 18px;
+        font-size: 12px;
+        text-align: center;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+    }
+    #main-container{
+        width: 650px;
+    }
+    /*main*/
+    .card-body p{
+        font-size: 15px;
+    }
+    footer i{
+        font-size: 25px;
+        color: #fff;
+    }
 }
-.ul-container-img-redes {
-    list-style: none;
-    padding-left: 0;
-    display: flex;
+@media screen and (max-width: 1024px){
+    .logo-restaurante {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        width: 70px;
+    }
+    i{
+        font-size: 24px;
+        color: #fff;
+    }
+    #id-input-buscar{
+        height: 30px;
+        font-size: 15px;
+        margin-right: 8px ;
+    }
+    #id-btn-buscar{
+        padding: 5px;
+        border: none;
+        background-color: #fff;
+    }
+    #id-logo-buscar{
+        color: #000;
+    }
+    #cantidadcarrito{
+        border-radius: 10px;
+        width: 18px;
+        font-size: 12px;
+        text-align: center;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+    }
+    /*main*/
+    .card-body p{
+        font-size: 15px;
+    }
+    footer i{
+        font-size: 25px;
+        color: #fff;
+    }
 }
-.ul-container-img-redes li{
-    padding: 0 8px;
+@media screen and (max-width: 768px){
+    .logo-restaurante {
+        width: 60px;
+    }
+    i{
+        font-size: 22px;
+        color: #fff;
+    }
+    #id-input-buscar{
+        height: 30px;
+        font-size: 15px;
+        margin-right: 8px ;
+    }
+    #id-btn-buscar{
+        padding: 5px;
+        border: none;
+        background-color: #fff;
+    }
+    #id-logo-buscar{
+        color: #000;
+    }
+    #cantidadcarrito{
+        border-radius: 10px;
+        width: 18px;
+        font-size: 12px;
+        text-align: center;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+    }
+    /*main*/
+    .card-body p{
+        font-size: 15px;
+    }
+    footer i{
+        font-size: 28px;
+        color: #fff;
+    }
 }
-.footer-img-lr {
-    width: 112px;
-}
-.div-container-derechos {
-    text-align: center;
-    font-size: 13px;
-    color: #fff;
-    padding: 14px;
-    font-family: HLTStd-bold,Helvetica,Arial,sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    max-width: 100%;
-}
-.div-container-derechos p{
-    margin: 0;
+@media screen and (max-width: 576px){
+    .logo-restaurante {
+        width: 50px;
+    }
+    i{
+        font-size: 20px;
+        color: #fff;
+    }
+    #id-input-buscar{
+        height: 27px;
+        font-size: 12px;
+        margin-right: 5px ;
+    }
+    #id-btn-buscar{
+        padding: 5px;
+        border: none;
+        background-color: #fff;
+    }
+    #id-logo-buscar{
+        color: #000;
+    }
+    #cantidadcarrito{
+        border-radius: 10px;
+        width: 18px;
+        font-size: 12px;
+        text-align: center;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+    }
+    /*main*/
+    .card-body p{
+        font-size: 15px;
+    }
+    footer i{
+        font-size: 22px;
+        color: #fff;
+    }
 }
